writing Fig2 notebook

--- a/notebooks/1_1_variant_detection_reference_building.ipynb
+++ b/notebooks/1_1_variant_detection_reference_building.ipynb
@@ -27,27 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "14"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "58*1.25"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +41,7 @@
     "\n",
     "# vk build\n",
     "cosmic_version = 100  # COSMIC version for gget cosmic\n",
-    "required_insertion_overlap_length = w // 4\n",
+    "required_insertion_overlap_length = w // 4  #* for old vk build behavior, set to None\n",
     "min_seq_len = int(k*1.25)\n",
     "# os.environ['COSMIC_EMAIL'] = 'your_email'  # to avoid being prompted for email in varseek build\n",
     "# os.environ['COSMIC_PASSWORD'] = 'your_password'  # to avoid being prompted for password in varseek build\n",
@@ -73,14 +53,15 @@
     "save_exploded_df=True\n",
     "\n",
     "# vk filter\n",
+    "minimum_triplet_complexity_percent = 0.001  # filter out bottom 0.1% of MCRSs by triplet complexity\n",
     "fasta_filters = [\n",
     "    \"dlist_substring-equal=none\",  # filter out mutations which are a substring of the reference genome\n",
     "    \"pseudoaligned_to_human_reference_despite_not_truly_aligning-isnottrue\",  # filter out mutations which pseudoaligned to human genome despite not truly aligning\n",
     "    \"dlist-equal=none\",  #*** erase eventually when I want to d-list  # filter out mutations which are capable of being d-listed (given that I filter out the substrings above)\n",
     "    \"number_of_kmers_with_overlap_to_other_mcrs_items_in_mcrs_reference-max=999999\",  # filter out mutations which overlap with other MCRSs in the reference\n",
     "    \"number_of_mcrs_items_with_overlapping_kmers_in_mcrs_reference-max=999999\",  # filter out mutations which overlap with other MCRSs in the reference\n",
-    "    \"longest_homopolymer_length-max=999999\",  # filters out MCRSs with repeating single nucleotide - eg 6\n",
-    "    \"triplet_complexity-min=0\"  # filters out MCRSs with repeating triplets - eg 0.2\n",
+    "    \"longest_homopolymer_length-bottompercent=99.99\",  # filters out MCRSs with repeating single nucleotide - 99.99 keeps the bottom 99.99%ile (fraction 0.9999)\n",
+    "    \"triplet_complexity-toppercent=99.9\"  # filters out MCRSs with repeating triplets - 99.9 keeps the top 99.9%ile (fraction 0.999)\n",
     "]\n",
     "\n",
     "# kb ref\n",
@@ -117,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,9 +238,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jrich/Desktop/varseek/varseek/varseek_filter.py:64: DtypeWarning: Columns (53,68,70) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  mutation_metadata_df = pd.read_csv(mutation_metadata_df_path)\n",
+      "16:24:00 - INFO - Initial number of mutations: 5300021\n",
+      "16:24:04 - INFO - Filtered 2898 mutations dlist_substring with equal none - 5297123 mutations remaining\n",
+      "16:24:10 - INFO - Filtered 86 mutations pseudoaligned_to_human_reference_despite_not_truly_aligning with isnottrue True - 5297037 mutations remaining\n",
+      "16:24:15 - INFO - Filtered 40056 mutations dlist with equal none - 5256981 mutations remaining\n",
+      "16:24:20 - INFO - Filtered 0 mutations number_of_kmers_with_overlap_to_other_mcrs_items_in_mcrs_reference with max 999999 - 5256981 mutations remaining\n",
+      "16:24:26 - INFO - Filtered 0 mutations number_of_mcrs_items_with_overlapping_kmers_in_mcrs_reference with max 999999 - 5256981 mutations remaining\n",
+      "16:24:31 - INFO - Filtered 450 mutations longest_homopolymer_length with bottompercent 99.99 - 5256531 mutations remaining\n",
+      "16:24:36 - INFO - Filtered 4989 mutations triplet_complexity with toppercent 99.9 - 5251542 mutations remaining\n",
+      "/home/jrich/Desktop/varseek/varseek/varseek_filter.py:111: DtypeWarning: Columns (11,12,13,26,27,31,53,68,70) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  mutation_metadata_df_exploded = pd.read_csv(mutation_metadata_df_exploded_path)\n",
+      "16:35:21 - INFO - Output fasta file with filtered mutations: /home/jrich/data/varseek_data_fresh/vk_build_pipeline_grch37_nov16/mcrs_filtered.fa\n",
+      "16:35:21 - INFO - t2g file containing mutated sequences created at /home/jrich/data/varseek_data_fresh/vk_build_pipeline_grch37_nov16/t2g_filtered.txt.\n"
+     ]
+    }
+   ],
    "source": [
     "# %%time\n",
     "vk.filter(mutation_metadata_df_path = mutation_metadata_df_out_path_vk_info,\n",
