--- a/notebooks/1_1_variant_detection_reference_building_t2t.ipynb
+++ b/notebooks/1_1_variant_detection_reference_building_t2t.ipynb
@@ -58,8 +58,8 @@
     "    \"dlist-equal=none\",  #*** erase eventually when I want to d-list  # filter out mutations which are capable of being d-listed (given that I filter out the substrings above)\n",
     "    \"number_of_kmers_with_overlap_to_other_mcrs_items_in_mcrs_reference-max=999999\",  # filter out mutations which overlap with other MCRSs in the reference\n",
     "    \"number_of_mcrs_items_with_overlapping_kmers_in_mcrs_reference-max=999999\",  # filter out mutations which overlap with other MCRSs in the reference\n",
-    "    \"longest_homopolymer_length-max=999999\",  # filters out MCRSs with repeating single nucleotide - eg 6\n",
-    "    \"triplet_complexity-min=0\"  # filters out MCRSs with repeating triplets - eg 0.2\n",
+    "    \"longest_homopolymer_length-bottompercent=99.99\",  # filters out MCRSs with repeating single nucleotide - 99.99 keeps the bottom 99.99%ile (fraction 0.9999)\n",
+    "    \"triplet_complexity-toppercent=99.9\"  # filters out MCRSs with repeating triplets - 99.9 keeps the top 99.9%ile (fraction 0.999)\n",
     "]\n",
     "\n",
     "# kb ref\n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,9 +236,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jrich/Desktop/varseek/varseek/varseek_filter.py:64: DtypeWarning: Columns (53,68,70) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  mutation_metadata_df = pd.read_csv(mutation_metadata_df_path)\n",
+      "16:09:02 - INFO - Initial number of mutations: 5300021\n",
+      "16:09:07 - INFO - Filtered 13131 mutations dlist_substring with equal none - 5286890 mutations remaining\n",
+      "16:09:13 - INFO - Filtered 286 mutations pseudoaligned_to_human_reference_despite_not_truly_aligning with isnottrue True - 5286604 mutations remaining\n",
+      "16:09:20 - INFO - Filtered 44953 mutations dlist with equal none - 5241651 mutations remaining\n",
+      "16:09:25 - INFO - Filtered 0 mutations number_of_kmers_with_overlap_to_other_mcrs_items_in_mcrs_reference with max 999999 - 5241651 mutations remaining\n",
+      "16:09:31 - INFO - Filtered 0 mutations number_of_mcrs_items_with_overlapping_kmers_in_mcrs_reference with max 999999 - 5241651 mutations remaining\n",
+      "16:09:37 - INFO - Filtered 440 mutations longest_homopolymer_length with bottompercentile 99.99 - 5241211 mutations remaining\n",
+      "16:09:43 - INFO - Filtered 4782 mutations triplet_complexity with toppercentile 99.9 - 5236429 mutations remaining\n",
+      "/home/jrich/Desktop/varseek/varseek/varseek_filter.py:111: DtypeWarning: Columns (11,12,13,26,27,31,53,68,70) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  mutation_metadata_df_exploded = pd.read_csv(mutation_metadata_df_exploded_path)\n",
+      "16:20:22 - INFO - Output fasta file with filtered mutations: /home/jrich/data/varseek_data_fresh/vk_build_pipeline_t2t_nov16/mcrs_filtered.fa\n",
+      "16:20:22 - INFO - t2g file containing mutated sequences created at /home/jrich/data/varseek_data_fresh/vk_build_pipeline_t2t_nov16/t2g_filtered.txt.\n"
+     ]
+    }
+   ],
    "source": [
     "# %%time\n",
     "vk.filter(mutation_metadata_df_path = mutation_metadata_df_out_path_vk_info,\n",
@@ -268,17 +289,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2024-12-09 16:54:21,666] WARNING [ref_custom] Using provided k-mer length 59 instead of optimal length 31\n",
+      "[2024-12-09 16:54:21,667]    INFO [ref_custom] Indexing /home/jrich/data/varseek_data_fresh/vk_build_pipeline_t2t_nov16/mcrs_wt_filtered.fa to /home/jrich/data/varseek_data_fresh/vk_build_pipeline_t2t_nov16/wt_mcrs_reference.idx\n",
+      "[2024-12-09 17:26:03,968]   ERROR [ref_custom] \n",
+      "[build] loading fasta file /home/jrich/data/varseek_data_fresh/vk_build_pipeline_t2t_nov16/mcrs_wt_filtered.fa\n",
+      "[build] k-mer length: 59\n",
+      "[build] warning: clipped off poly-A tail (longer than 10)\n",
+      "from 30 target sequences\n",
+      "KmerStream::KmerStream(): Start computing k-mer cardinality estimations (1/2)\n",
+      "KmerStream::KmerStream(): Start computing k-mer cardinality estimations (1/2)\n",
+      "KmerStream::KmerStream(): Finished\n",
+      "CompactedDBG::build(): Estimated number of k-mers occurring at least once: 32785931\n",
+      "CompactedDBG::build(): Estimated number of minimizer occurring at least once: 8219297\n",
+      "CompactedDBG::filter(): Processed 266274689 k-mers in 5234850 reads\n",
+      "CompactedDBG::filter(): Found 32772678 unique k-mers\n",
+      "CompactedDBG::filter(): Number of blocks in Bloom filter is 224124\n",
+      "CompactedDBG::construct(): Extract approximate unitigs (1/2)\n",
+      "CompactedDBG::construct(): Extract approximate unitigs (2/2)\n",
+      "CompactedDBG::construct(): Closed all input files\n",
+      "\n",
+      "CompactedDBG::construct(): Splitting unitigs (1/2)\n",
+      "\n",
+      "CompactedDBG::construct(): Splitting unitigs (2/2)\n",
+      "CompactedDBG::construct(): Before split: 59241 unitigs\n",
+      "CompactedDBG::construct(): After split (1/1): 59243 unitigs\n",
+      "CompactedDBG::construct(): Unitigs split: 900\n",
+      "CompactedDBG::construct(): Unitigs deleted: 0\n",
+      "\n",
+      "CompactedDBG::construct(): Joining unitigs\n",
+      "CompactedDBG::construct(): After join: 43605 unitigs\n",
+      "CompactedDBG::construct(): Joined 15656 unitigs\n",
+      "[build] building MPHF\n",
+      "[build] creating equivalence classes ...\n",
+      "[2024-12-09 17:26:03,969]   ERROR [main] An exception occurred\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/jrich/miniconda3/envs/varseek2/lib/python3.10/site-packages/kb_python/main.py\", line 1926, in main\n",
+      "    COMMAND_TO_FUNCTION[args.command](parser, args, temp_dir=temp_dir)\n",
+      "  File \"/home/jrich/miniconda3/envs/varseek2/lib/python3.10/site-packages/kb_python/main.py\", line 345, in parse_ref\n",
+      "    ref_custom(\n",
+      "  File \"/home/jrich/miniconda3/envs/varseek2/lib/python3.10/site-packages/ngs_tools/logging.py\", line 62, in inner\n",
+      "    return func(*args, **kwargs)\n",
+      "  File \"/home/jrich/miniconda3/envs/varseek2/lib/python3.10/site-packages/kb_python/ref.py\", line 825, in ref_custom\n",
+      "    index_result = kallisto_index(\n",
+      "  File \"/home/jrich/miniconda3/envs/varseek2/lib/python3.10/site-packages/kb_python/ref.py\", line 291, in kallisto_index\n",
+      "    run_executable(command)\n",
+      "  File \"/home/jrich/miniconda3/envs/varseek2/lib/python3.10/site-packages/kb_python/dry/__init__.py\", line 25, in inner\n",
+      "    return func(*args, **kwargs)\n",
+      "  File \"/home/jrich/miniconda3/envs/varseek2/lib/python3.10/site-packages/kb_python/utils.py\", line 203, in run_executable\n",
+      "    raise sp.CalledProcessError(p.returncode, ' '.join(command))\n",
+      "subprocess.CalledProcessError: Command '/home/jrich/miniconda3/envs/varseek2/lib/python3.10/site-packages/kb_python/bins/linux/kallisto/kallisto_k64 index -i /home/jrich/data/varseek_data_fresh/vk_build_pipeline_t2t_nov16/wt_mcrs_reference.idx -k 59 -t 8 /home/jrich/data/varseek_data_fresh/vk_build_pipeline_t2t_nov16/mcrs_wt_filtered.fa' died with <Signals.SIGKILL: 9>.\n"
+     ]
+    }
+   ],
    "source": [
     "# %%time\n",
     "if not os.path.exists(mutation_index):\n",
     "    kb_ref_command = [\"kb\", \"ref\", \"--workflow\", \"custom\", \"-t\", str(threads), \"-i\", mutation_index, \"--d-list\", dlist_kb_argument, \"-k\", str(k), mcrs_fasta_vk_filter]\n",
     "    subprocess.run(kb_ref_command, check=True)\n",
     "\n",
-    "if os.path.exists(wt_mcrs_fa_vk_filter) and not os.path.exists(mutation_index):\n",
-    "    kb_ref_command = [\"kb\", \"ref\", \"--workflow\", \"custom\", \"-t\", str(threads), \"-i\", wt_mcrs_index, \"--d-list\", dlist_kb_argument, \"-k\", str(k), wt_mcrs_fa_vk_filter]\n",
+    "if not os.path.exists(wt_mcrs_index) and os.path.exists(wt_mcrs_fa_vk_filter):\n",
+    "    kb_ref_command = [\"kb\", \"ref\", \"--workflow\", \"custom\", \"-t\", str(threads), \"-i\", wt_mcrs_index, \"--d-list\", \"None\", \"-k\", str(k), wt_mcrs_fa_vk_filter]\n",
     "    subprocess.run(kb_ref_command, check=True)"
    ]
   },
