--- a/notebooks/2_2_gatk_workflow.ipynb
+++ b/notebooks/2_2_gatk_workflow.ipynb
@@ -1299,16 +1299,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from varseek.utils import vcf_to_dataframe\n",
     "\n",
     "# Convert VCF to DataFrame\n",
-    "df_hap = vcf_to_dataframe(haplotypecaller_filtered_applied_vcf, additional_columns = False)\n",
-    "df_mut = vcf_to_dataframe(mutect2_filtered_vcf, additional_columns = False)\n",
-    "\n"
+    "df_hap = vcf_to_dataframe(haplotypecaller_filtered_applied_vcf, additional_columns = True)\n",
+    "df_mut = vcf_to_dataframe(mutect2_filtered_vcf, additional_columns = True)\n",
+    "\n",
+    "df_hap = df_hap[['CHROM', 'POS', 'ID', 'REF', 'ALT', 'INFO_DP']].rename(columns={'INFO_DP': 'DP_gatk_haplotypecaller'})\n",
+    "df_mut = df_mut[['CHROM', 'POS', 'ID', 'REF', 'ALT', 'INFO_DP']].rename(columns={'INFO_DP': 'DP_gatk_mutect2'})"
    ]
   },
   {
@@ -1334,313 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CHROM</th>\n",
-       "      <th>POS</th>\n",
-       "      <th>ID</th>\n",
-       "      <th>REF</th>\n",
-       "      <th>ALT</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>11317200</td>\n",
-       "      <td>None</td>\n",
-       "      <td>A</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>18809599</td>\n",
-       "      <td>None</td>\n",
-       "      <td>C</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>21097513</td>\n",
-       "      <td>None</td>\n",
-       "      <td>G</td>\n",
-       "      <td>A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>22175267</td>\n",
-       "      <td>None</td>\n",
-       "      <td>CG</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>22191504</td>\n",
-       "      <td>None</td>\n",
-       "      <td>G</td>\n",
-       "      <td>A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189</th>\n",
-       "      <td>X</td>\n",
-       "      <td>144909240</td>\n",
-       "      <td>None</td>\n",
-       "      <td>C</td>\n",
-       "      <td>G</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>190</th>\n",
-       "      <td>X</td>\n",
-       "      <td>149639713</td>\n",
-       "      <td>None</td>\n",
-       "      <td>G</td>\n",
-       "      <td>A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>191</th>\n",
-       "      <td>X</td>\n",
-       "      <td>151424286</td>\n",
-       "      <td>None</td>\n",
-       "      <td>C</td>\n",
-       "      <td>A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>192</th>\n",
-       "      <td>X</td>\n",
-       "      <td>153633210</td>\n",
-       "      <td>None</td>\n",
-       "      <td>C</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>193</th>\n",
-       "      <td>X</td>\n",
-       "      <td>154455544</td>\n",
-       "      <td>None</td>\n",
-       "      <td>C</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>194 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    CHROM        POS    ID REF ALT\n",
-       "0       1   11317200  None   A   C\n",
-       "1       1   18809599  None   C   T\n",
-       "2       1   21097513  None   G   A\n",
-       "3       1   22175267  None  CG   C\n",
-       "4       1   22191504  None   G   A\n",
-       "..    ...        ...   ...  ..  ..\n",
-       "189     X  144909240  None   C   G\n",
-       "190     X  149639713  None   G   A\n",
-       "191     X  151424286  None   C   A\n",
-       "192     X  153633210  None   C   T\n",
-       "193     X  154455544  None   C   T\n",
-       "\n",
-       "[194 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_mut"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CHROM</th>\n",
-       "      <th>POS</th>\n",
-       "      <th>ID</th>\n",
-       "      <th>REF</th>\n",
-       "      <th>ALT</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>11317200</td>\n",
-       "      <td>None</td>\n",
-       "      <td>A</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>18809599</td>\n",
-       "      <td>None</td>\n",
-       "      <td>C</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>21097513</td>\n",
-       "      <td>None</td>\n",
-       "      <td>G</td>\n",
-       "      <td>A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>42875732</td>\n",
-       "      <td>None</td>\n",
-       "      <td>C</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>44476508</td>\n",
-       "      <td>None</td>\n",
-       "      <td>T</td>\n",
-       "      <td>G</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>X</td>\n",
-       "      <td>48933283</td>\n",
-       "      <td>None</td>\n",
-       "      <td>G</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>X</td>\n",
-       "      <td>96220126</td>\n",
-       "      <td>None</td>\n",
-       "      <td>G</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>X</td>\n",
-       "      <td>144909240</td>\n",
-       "      <td>None</td>\n",
-       "      <td>C</td>\n",
-       "      <td>G</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>X</td>\n",
-       "      <td>149639713</td>\n",
-       "      <td>None</td>\n",
-       "      <td>G</td>\n",
-       "      <td>A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>101</th>\n",
-       "      <td>X</td>\n",
-       "      <td>154455544</td>\n",
-       "      <td>None</td>\n",
-       "      <td>C</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>102 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    CHROM        POS    ID REF ALT\n",
-       "0       1   11317200  None   A   C\n",
-       "1       1   18809599  None   C   T\n",
-       "2       1   21097513  None   G   A\n",
-       "3       1   42875732  None   C   T\n",
-       "4       1   44476508  None   T   G\n",
-       "..    ...        ...   ...  ..  ..\n",
-       "97      X   48933283  None   G   C\n",
-       "98      X   96220126  None   G   T\n",
-       "99      X  144909240  None   C   G\n",
-       "100     X  149639713  None   G   A\n",
-       "101     X  154455544  None   C   T\n",
-       "\n",
-       "[102 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_hap"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1655,49 +1351,10 @@
    "source": [
     "# load in unique_mcrs_df\n",
     "unique_mcrs_df = pd.read_csv(unique_mcrs_df_path)\n",
-    "unique_mcrs_df.rename(columns={'TP': 'TP_vk', 'FP': 'FP_vk', 'TN': 'TN_vk', 'FN': 'FN_vk'}, inplace=True)\n",
+    "unique_mcrs_df.rename(columns={'received_an_aligned_read': 'mutation_detected_vk', 'number_of_reads_aligned_to_this_item': 'DP_vk', 'mutation_expression_prediction_error': 'mutation_expression_prediction_error_vk', 'TP_crude': 'TP_vk', 'FP_crude': 'FP_vk', 'TN_crude': 'TN_vk', 'FN_crude': 'FN_vk', 'TP': 'TP_vk_read_specific', 'FP': 'FP_vk_read_specific', 'TN': 'TN_vk_read_specific', 'FN': 'FN_vk_read_specific'}, inplace=True)\n",
     "\n",
     "from varseek.utils import safe_literal_eval\n",
     "unique_mcrs_df[\"header_list\"] = unique_mcrs_df[\"header_list\"].apply(safe_literal_eval)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# filtered_df = cosmic_df[(cosmic_df['POS'].astype(int) >= 3699230) & (cosmic_df['POS'].astype(int) <= 3699239)]\n",
-    "# filtered_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 5300021/5300021 [00:48<00:00, 108288.78it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "from tqdm import tqdm\n",
-    "tqdm.pandas()\n",
-    "from varseek.utils import safe_literal_eval\n",
-    "unique_mcrs_df[\"header_list\"] = unique_mcrs_df[\"header_list\"].progress_apply(safe_literal_eval)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# vk_tp = unique_mcrs_df.loc[unique_mcrs_df['TP_vk']]"
    ]
   },
   {
@@ -1727,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1808,6 +1465,8 @@
     "    lambda header_list: any(header in id_set_mut for header in header_list)\n",
     ")\n",
     "\n",
+    "# calculate expression error\n",
+    "unique_mcrs_df['mutation_expression_prediction_error_gatk_mutect2'] = unique_mcrs_df['DP_gatk_mutect2'] - unique_mcrs_df['number_of_reads_mutant']  # positive means overpredicted, negative means underpredicted\n",
     "\n",
     "unique_mcrs_df['TP'] = (unique_mcrs_df['included_in_synthetic_reads_mutant'] & unique_mcrs_df['mutation_detected_gatk_mutect2'])\n",
     "unique_mcrs_df['FP'] = (~unique_mcrs_df['included_in_synthetic_reads_mutant'] & unique_mcrs_df['mutation_detected_gatk_mutect2'])\n",
@@ -1844,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1923,6 +1582,9 @@
     "unique_mcrs_df['mutation_detected_gatk_haplotypecaller'] = unique_mcrs_df['header_list'].apply(\n",
     "    lambda header_list: any(header in id_set_hap for header in header_list)\n",
     ")\n",
+    "\n",
+    "# calculate expression error\n",
+    "unique_mcrs_df['mutation_expression_prediction_error_gatk_haplotypecaller'] = unique_mcrs_df['DP_gatk_haplotypecaller'] - unique_mcrs_df['number_of_reads_mutant']  # positive means overpredicted, negative means underpredicted\n",
     "\n",
     "unique_mcrs_df['TP'] = (unique_mcrs_df['included_in_synthetic_reads_mutant'] & unique_mcrs_df['mutation_detected_gatk_haplotypecaller'])\n",
     "unique_mcrs_df['FP'] = (~unique_mcrs_df['included_in_synthetic_reads_mutant'] & unique_mcrs_df['mutation_detected_gatk_haplotypecaller'])\n",
